--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wellness Dashboard</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Wellness Dashboard</title>
+<meta name="description" content="A free personal well-being dashboard for remote workers. Stay productive and healthy with hydration reminders, Pomodoro focus, and stretch alerts.">
+
+<meta name="keywords" content="wellness dashboard, remote work health, pomodoro tracker, hydration reminder, stretch alert, productivity tool, remote worker tools, WFH health, well-being app, free productivity dashboard">
+
+<meta name="author" content="Lakshay Kumar">
     <style>
         :root {
             --primary-bg: #ffffff;
